[gd_scene load_steps=5 format=2]

[ext_resource path="res://escenas/niñoFrente.gd" type="Script" id=1]
[ext_resource path="res://imagen/1233706_6b7ea.jpg" type="Texture" id=2]
[ext_resource path="res://imagen/cuerposXD/foto de niño frente.png" type="Texture" id=3]
[ext_resource path="res://imagen/menu.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 241.901, 362.636 )
scale = Vector2( 1.21234, 1.81904 )
texture = ExtResource( 2 )

[node name="niño" type="Sprite" parent="."]
position = Vector2( 248.747, 316.495 )
scale = Vector2( 1.27622, 0.988949 )
texture = ExtResource( 3 )

[node name="audios" type="AudioStreamPlayer" parent="."]

[node name="cabeza" type="TextureButton" parent="."]
margin_left = 176.0
margin_top = 59.0
margin_right = 327.0
margin_bottom = 180.0

[node name="ojos" type="TextureButton" parent="."]
margin_left = 208.0
margin_top = 125.0
margin_right = 282.0
margin_bottom = 149.0

[node name="nariz" type="TextureButton" parent="."]
margin_left = 231.0
margin_top = 144.0
margin_right = 257.0
margin_bottom = 158.0

[node name="boca" type="TextureButton" parent="."]
margin_left = 224.0
margin_top = 158.0
margin_right = 264.0
margin_bottom = 174.0

[node name="oreja1" type="TextureButton" parent="."]
margin_left = 184.0
margin_top = 131.0
margin_right = 208.0
margin_bottom = 167.0

[node name="oreja2" type="TextureButton" parent="."]
margin_left = 285.0
margin_top = 129.0
margin_right = 309.0
margin_bottom = 163.0

[node name="cuello" type="TextureButton" parent="."]
margin_left = 227.0
margin_top = 180.0
margin_right = 267.0
margin_bottom = 194.0

[node name="hombros" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 200.0
margin_right = 321.0
margin_bottom = 230.0

[node name="pecho" type="TextureButton" parent="."]
margin_left = 204.0
margin_top = 200.0
margin_right = 288.0
margin_bottom = 256.0

[node name="mano1" type="TextureButton" parent="."]
margin_left = 137.518
margin_top = 323.573
margin_right = 177.518
margin_bottom = 363.573

[node name="mano2" type="TextureButton" parent="."]
margin_left = 315.484
margin_top = 323.573
margin_right = 355.484
margin_bottom = 363.573

[node name="ombligo" type="TextureButton" parent="."]
margin_left = 227.0
margin_top = 281.0
margin_right = 267.0
margin_bottom = 305.0

[node name="abdomen" type="TextureButton" parent="."]
margin_left = 204.0
margin_top = 253.0
margin_right = 286.0
margin_bottom = 301.0

[node name="piernas" type="TextureButton" parent="."]
margin_left = 184.0
margin_top = 322.0
margin_right = 303.0
margin_bottom = 417.0

[node name="pIntimaH" type="TextureButton" parent="."]
margin_left = 222.0
margin_top = 325.844
margin_right = 263.0
margin_bottom = 363.844

[node name="rodillas" type="TextureButton" parent="."]
margin_left = 184.0
margin_top = 413.0
margin_right = 307.0
margin_bottom = 445.0

[node name="canilla" type="TextureButton" parent="."]
margin_left = 184.0
margin_top = 441.0
margin_right = 309.0
margin_bottom = 487.0

[node name="talon" type="TextureButton" parent="."]
margin_left = 180.0
margin_top = 493.0
margin_right = 313.0
margin_bottom = 525.0

[node name="pies" type="TextureButton" parent="."]
margin_left = 152.0
margin_top = 520.0
margin_right = 340.0
margin_bottom = 576.0

[node name="brazo1" type="TextureButton" parent="."]
margin_left = 144.0
margin_top = 241.0
margin_right = 192.0
margin_bottom = 313.0

[node name="brazo2" type="TextureButton" parent="."]
margin_left = 303.022
margin_top = 243.0
margin_right = 343.022
margin_bottom = 315.0

[node name="Voltear" type="Button" parent="."]
margin_left = 157.0
margin_top = 593.0
margin_right = 334.0
margin_bottom = 628.0
text = "VOLTEAR"

[node name="Buttonvolvermenu" type="Button" parent="."]
margin_left = 181.538
margin_top = 646.063
margin_right = 705.538
margin_bottom = 880.063
rect_scale = Vector2( 0.229011, 0.188801 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttonvolvermenu" to="." method="_on_Buttonvolvermenu_pressed"]
